--- a/feuille.css
+++ b/feuille.css
@@ -42,11 +42,12 @@ body{
 }
 
 #centre {  
-    max-width:1200px;
-    min-height:350px;  
-    margin-left:150px; 
-    margin-bottom:10px;
+    max-width:1800px;
+    min-height:450px;  
+    margin-left:30px; 
+    margin-bottom:20px;
     font-size:13px;  
+    
 } 
 
 #centre2{
@@ -76,8 +77,7 @@ h3{
 }
 
 #croix{
-   cursor:pointer;
-   float:right;  
+   margin-left:10px;  
 }
 
 #croix:hover{
@@ -197,53 +197,125 @@ textarea{
 
 /* ------- tableau visualisation compte------- */
 
-td{
-   width:140px; 
-}
 
-#afficherTableau{
-    width:985px;     
+#afficherTableau{   
     margin-left:30px;
 }
 
-#table1{	   	                    
-    font-size:13px;
-    text-align:center;
-      
+.blockMois{  
+    width:1000px; 
+    height:35px;   
 }
 
-.titremois{
-  background: #a9bfc9; /* Old browsers */
+.blockValeur1{
+    width:1000px; 
+    height:50px; text-align:center; 
+}
+.blockValeur2{
+    width:1000px; 
+    height:50px; text-align:center; 
+ 
+}
+
+.titreValeur1{
+    background-repeat:repeat;
+    background-image:url(images/fondFieldset.png);
+    width:120px; 
+    padding-top:5px; 
+    float:left;
+    padding-left:10px;  
+    font-size:14px;  height:50px; clear: both;
+    
+}
+.titreValeur2{
+   
+    width:120px; 
+    padding-top:5px; 
+    float:left;
+    padding-left:10px;  
+    font-size:14px;  height:50px; clear: both;
+    
+}
+.valeur1, .valeur1R{
+    background-repeat:repeat;
+    background-image:url(images/fondFieldset.png);
+    font-style: italic; 
+    padding-top:15px; 
+    text-align:center; 
+    width:120px; 
+    height:40px;
+    float: left;
+    border-right:1px solid gray;
+}
+
+.conteneur1{    
+    overflow: hidden;
+    width:727px; 
+    float:left;
+}
+
+.titreMois{
+   
+    width:120px; 
+    height:30px;
+    padding-top:5px; 
+    float:left;
+    padding-left:10px;  
+    font-size:14px; background: #a9bfc9; /* Old browsers */
     background: -moz-linear-gradient(top, #a9bfc9 0%, #95b1bd 50%, #85a2ad 51%, #537585 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #a9bfc9 0%,#95b1bd 50%,#85a2ad 51%,#537585 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, #a9bfc9 0%,#95b1bd 50%,#85a2ad 51%,#537585 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    
 }
 
-.fondMois{    
-    font-style: italic;
-    font-weight: bold; border-top:1px solid gray; border-bottom:1px solid gray;
-}
 
 
-.fondG,.fondGR{
-   background-repeat:repeat;
-   background-image:url(images/fondFieldset.png);
-    background-repeat:repeat;
 
+
+
+.co{
+     width:1800px;
     
 }
-.fondGR{
+.libelleMois{ 
+  
+    font-style: italic; 
+    padding-top:5px; 
+    text-align:center;
+    font-weight: bold;  
+    width:120px; 
+    height:30px;
+    float: left;
+    border-left:1px solid gray;
+ background: #a9bfc9; /* Old browsers */
+    background: -moz-linear-gradient(top, #a9bfc9 0%, #95b1bd 50%, #85a2ad 51%, #537585 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #a9bfc9 0%,#95b1bd 50%,#85a2ad 51%,#537585 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #a9bfc9 0%,#95b1bd 50%,#85a2ad 51%,#537585 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+
+
+.valeur2{
+    background-color:#dfe7ea;
+    background-repeat:repeat;
+    font-style: italic; 
+    padding-top:15px; 
+    text-align:center;
+    width:120px; 
+    height:50px;
+    float: left;
+    border-right:1px solid gray;
+}
+.valeur1R{
    color:red;
     
 }
-.fondW{
-    background-color:#dfe7ea;
-    background-repeat:repeat;  
-    
-}
-.fondGT{
-   background: #acacac; /* Old browsers */
+ 
+
+
+.fondBenefice{ 
+ 
+   background: #acacac; /* Old browsers */clear: both;
    background-repeat:repeat;
     
 }
@@ -254,6 +326,19 @@ td{
 
 
 /* ------- liste d'année ------- */ 
+
+
+#table1{	   	                    
+    font-size:13px;
+    text-align:center;
+      
+}
+
+
+td{
+   width:140px; 
+}
+
 .titreA{
     background: rgb(139,173,211); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(139,173,211,1) 0%, rgba(164,196,222,1) 50%, rgba(153,189,221,1) 51%, rgba(200,220,236,1) 100%); /* FF3.6-15 */
